--- a/Master/PythonAnalysis/SentimentHybrid-Both.ipynb
+++ b/Master/PythonAnalysis/SentimentHybrid-Both.ipynb
@@ -2,62 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\1704834\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\Nick\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\1704834\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\Nick\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\1704834\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
-      "Collecting tweepy\n",
-      "  Downloading https://files.pythonhosted.org/packages/d5/5f/daac4b4e9b30d7d2a6fdd16a880ff79f27918fe388e4dfc1983dec3a9876/tweepy-3.7.0-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: PySocks>=1.5.7 in c:\\anaconda\\lib\\site-packages (from tweepy) (1.6.8)\n",
-      "Requirement already satisfied: six>=1.10.0 in c:\\anaconda\\lib\\site-packages (from tweepy) (1.11.0)\n",
-      "Requirement already satisfied: requests>=2.11.1 in c:\\anaconda\\lib\\site-packages (from tweepy) (2.18.4)\n",
-      "Collecting requests-oauthlib>=0.7.0 (from tweepy)\n",
-      "  Downloading https://files.pythonhosted.org/packages/c2/e2/9fd03d55ffb70fe51f587f20bcf407a6927eb121de86928b34d162f0b1ac/requests_oauthlib-1.2.0-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\anaconda\\lib\\site-packages (from requests>=2.11.1->tweepy) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.7,>=2.5 in c:\\anaconda\\lib\\site-packages (from requests>=2.11.1->tweepy) (2.6)\n",
-      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in c:\\anaconda\\lib\\site-packages (from requests>=2.11.1->tweepy) (1.22)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\anaconda\\lib\\site-packages (from requests>=2.11.1->tweepy) (2018.4.16)\n",
-      "Collecting oauthlib>=3.0.0 (from requests-oauthlib>=0.7.0->tweepy)\n",
-      "  Downloading https://files.pythonhosted.org/packages/16/95/699466b05b72b94a41f662dc9edf87fda4289e3602ecd42d27fcaddf7b56/oauthlib-3.0.1-py2.py3-none-any.whl (142kB)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed 1.21.8 requires msgpack, which is not installed.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installing collected packages: oauthlib, requests-oauthlib, tweepy\n",
-      "Successfully installed oauthlib-3.0.1 requests-oauthlib-1.2.0 tweepy-3.7.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using pip version 10.0.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+      "[nltk_data]     C:\\Users\\Nick\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "#Import checks\n",
     "from pip._internal import main as pipmain\n",
     "\n",
@@ -70,12 +35,14 @@
     "    nltk.download('punkt')\n",
     "    nltk.download('vader_lexicon')\n",
     "except:\n",
-    "    \n",
+    "\n",
     "    pipmain([\"install\", \"nltk\"])\n",
     "    nltk.download('stopwords')\n",
+    "    import nltk\n",
     "    from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "    from nltk.corpus import stopwords\n",
     "    from nltk.stem import PorterStemmer\n",
+    "    nltk.download('stopwords')\n",
     "try:\n",
     "    import re\n",
     "except:\n",
@@ -139,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -765,67 +732,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "getting tweets before 1021470425300291583\n",
-      "...397 tweets downloaded so far\n",
-      "getting tweets before 939023790314418176\n",
-      "...596 tweets downloaded so far\n",
-      "getting tweets before 866467468663042047\n",
-      "...795 tweets downloaded so far\n",
-      "getting tweets before 794087248039989247\n",
-      "...995 tweets downloaded so far\n",
-      "getting tweets before 727070209786404864\n",
-      "...1192 tweets downloaded so far\n",
-      "getting tweets before 662918154151137279\n",
-      "...1392 tweets downloaded so far\n",
-      "getting tweets before 611472083076423679\n",
-      "...1592 tweets downloaded so far\n",
-      "getting tweets before 594877480084893695\n",
-      "...1792 tweets downloaded so far\n",
-      "getting tweets before 555085294639529984\n",
-      "...1991 tweets downloaded so far\n",
-      "getting tweets before 514313750565122047\n",
-      "...2187 tweets downloaded so far\n",
-      "getting tweets before 498795127696281600\n",
-      "...2387 tweets downloaded so far\n",
-      "getting tweets before 458872104688312319\n",
-      "...2586 tweets downloaded so far\n",
-      "getting tweets before 365340931236442111\n",
-      "...2786 tweets downloaded so far\n",
-      "getting tweets before 196394005431468031\n",
-      "...2984 tweets downloaded so far\n",
-      "getting tweets before 6832513525\n",
-      "...3184 tweets downloaded so far\n",
-      "getting tweets before 2040658919\n",
-      "...3197 tweets downloaded so far\n",
-      "getting tweets before 1983660449\n",
-      "...3197 tweets downloaded so far\n"
+      "Loading Mode: British\n",
+      "Error\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:313: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'plotly'",
+     "ename": "WindowsError",
+     "evalue": "[Error 3] The system cannot find the path specified: 'E:\\\\Honours\\\\Master\\\\Twitter-Learning-Data\\\\Collections'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-30e9f27e63ee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Analyse user test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#LoadBritish()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mAnalyseUser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"wildfireone\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-19-5b582847d066>\u001b[0m in \u001b[0;36mAnalyseUser\u001b[1;34m(Username, Mode)\u001b[0m\n\u001b[0;32m    398\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    399\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mAnalyseUser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUsername\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 400\u001b[1;33m     \u001b[0mAnalyseTweets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUsername\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    401\u001b[0m     \u001b[0mAnalyseFavourites\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUsername\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    402\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-19-5b582847d066>\u001b[0m in \u001b[0;36mAnalyseTweets\u001b[1;34m(Username, Mode)\u001b[0m\n\u001b[0;32m    329\u001b[0m             \u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    330\u001b[0m     \u001b[0mUserData\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUsername\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"-Tweets-Classification.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 331\u001b[1;33m     \u001b[0mGeneratePie\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mUsercollection\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mUsername\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"-Tweets\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    332\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    333\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mMode\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"British\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-19-5b582847d066>\u001b[0m in \u001b[0;36mGeneratePie\u001b[1;34m(collection, name)\u001b[0m\n\u001b[0;32m    202\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    203\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mGeneratePie\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcollection\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 204\u001b[1;33m     \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    205\u001b[0m     \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_credentials_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0musername\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'itjallingii'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'hiFqLEhfwSwdDlsj9lT8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    206\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+      "\u001b[1;31mWindowsError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-0afd3bc89aef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Analyse user test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mLoadBritish\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mAnalyseUser\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"wildfireone\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-14-2c9b276f4e3d>\u001b[0m in \u001b[0;36mLoadBritish\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m         \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m         \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"E:\\Honours\\Master\\Twitter-Learning-Data\\Collections\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mBritishDF\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpandas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"AmericanCollection.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mWindowsError\u001b[0m: [Error 3] The system cannot find the path specified: 'E:\\\\Honours\\\\Master\\\\Twitter-Learning-Data\\\\Collections'"
      ]
     }
    ],
    "source": [
     "#Analyse user test\n",
-    "#LoadBritish()\n",
+    "LoadBritish()\n",
     "AnalyseUser(\"wildfireone\", Mode)"
    ]
   },
@@ -1258,21 +1184,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
